Adding code to do login redirect for resource providers
