# src/services/resource_service.rs
@@ -1,30 +1,24 @@
-use crate::db::keys_dao::db_get_key_by_id;
-use crate::db::resource_provider_dao::db_get_resource_providers;
+use crate::db::config_dao::db_get_http_config;
+use crate::db::resource_provider_dao::{db_get_resource_provider_by_id, db_get_resource_providers};
 use crate::models::resource_api::GetResourceProviderResponse;
-use crate::services::login_service::TmsTokenClaims;
-use crate::services::service_error::ServiceError::BadRequest;
-use crate::utils::jwt_utils::JwtDecoderBuilder;
+use crate::services::login_service::encode_state;
+use crate::services::service_error::ServiceError::Internal;
+use crate::utils::oauth2_utils::OAuth2State;
 use anyhow::Result;
-use jsonwebtoken::decode_header;
+use base64::prelude::BASE64_STANDARD;
+use base64::Engine;
+use jsonwebtoken::signature::rand_core::{OsRng, RngCore};
 use sqlx::PgPool;
+use std::time::SystemTime;
+use url::Url;
 
-pub async fn get_resource_providers(
-    db_pool: &PgPool,
-    token: &String,
-) -> Result<GetResourceProviderResponse> {
-    let token_header = decode_header(token)?;
-    let mut tx = db_pool.begin().await?;
-    let key = match token_header.kid {
-        Some(kid) => db_get_key_by_id(&mut tx, &kid).await,
-        None => return Err(BadRequest(String::from("Unable to find key for jwt")).into()),
-    }?;
-    tx.commit().await?;
-
-    let tms_token_claims: TmsTokenClaims = JwtDecoderBuilder::builder()
-        .public_key(key.jwt_public_key.as_bytes())
-        .decode(token)
-        .await?;
-
+pub struct ResourceProviderAuthorizeInfo {
+    pub encoded_state: String,
+    pub identity_redirect_url: Url,
+    pub client_id: String,
+    pub client_secret: String,
+}
+pub async fn get_resource_providers(db_pool: &PgPool) -> Result<GetResourceProviderResponse> {
     let mut tx = db_pool.begin().await?;
     let rps = db_get_resource_providers(&mut tx).await?;
     tx.commit().await?;
@@ -34,4 +28,58 @@ pub async fn get_resource_providers(
         resource_provider_result.insert(rp.clone().into());
     });
     Ok(resource_provider_result)
+}
+
+pub async fn get_authenticate_redirect(
+    db_pool: &PgPool,
+    client_id: &String,
+    provider_id: &String,
+) -> Result<ResourceProviderAuthorizeInfo> {
+    let mut tx = db_pool.begin().await?;
+    let rp = db_get_resource_provider_by_id(&mut tx, provider_id).await?;
+
+    let oauth_state = OAuth2State {
+        client_id: client_id.clone(),
+        idp_id: rp.id,
+        redirect_uri: rp.identity_redirect_url.clone(),
+        exp: SystemTime::now()
+            .duration_since(SystemTime::UNIX_EPOCH)?
+            .as_secs()
+            + 300000,
+    };
+
+    let encoded_state = match encode_state(&db_pool, oauth_state).await {
+        Ok(state_string) => state_string,
+        Err(error) => return Err(Internal(error.to_string()).into()),
+    };
+
+    let mut tx = db_pool.begin().await?;
+    let http_config = db_get_http_config(&mut tx).await?;
+    tx.commit().await?;
+    let callback_url = &http_config.get_callback_url();
+    let mut nonce = [0u8; 12];
+    OsRng.fill_bytes(&mut nonce);
+    let nonce_slice = BASE64_STANDARD.encode(nonce);
+    let mut query_params = vec![
+        ("response_type", "code"),
+        ("client_id", &rp.client_id),
+        ("redirect_uri", callback_url),
+        ("state", &encoded_state),
+        ("nonce", &nonce_slice),
+        ("access_type", "offline"),
+    ];
+
+    if let Some(scope) = &rp.scope {
+        query_params.push(("scope", scope.as_str()))
+    }
+
+    // TODO:  make a real nonce
+    let identity_redirect_url = Url::parse_with_params(&rp.identity_redirect_url, query_params)?;
+
+    Ok(ResourceProviderAuthorizeInfo {
+        encoded_state,
+        identity_redirect_url,
+        client_id: rp.client_id,
+        client_secret: rp.client_secret,
+    })
 }
